permissions array into roles update, test, swagger controller
